[workspace]
resolver = "2"
members = [
    "rasn-compiler",
    "rasn-compiler-derive",
    "rasn-compiler-tests",
    "rasn-compiler/internal-macros"
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT/Apache-2.0"
version = "0.15.0"
repository = "https://github.com/librasn/compiler.git"
homepage = "https://librasn.github.io/"
