[package]
name = "rasn-compiler-derive"
workspace = ".."
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
description = "Macros producing bindings for the rasn framework"
keywords = ["rust", "compiler", "asn1", "ber", "der", "per", "uper", "rasn"]
categories = ["compilers", "parser-implementations", "wasm", "encoding"]
authors = ["Kevin Westphal"]

[lib]
proc-macro = true

[dependencies]
rasn-compiler = { path = "../rasn-compiler" }
proc-macro2 = "1"
syn= "2"
