[package]
name = "rasn-compiler-derive"
workspace = ".."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
description = "Macros producing bindings for the rasn framework"
keywords = ["macros", "compiler", "asn1", "rasn"]
categories = ["compilers", "parser-implementations", "wasm", "encoding"]
authors = ["Kevin Westphal"]

[lib]
proc-macro = true

[dependencies]
rasn-compiler = { path = "../rasn-compiler", version = "0.15.0" }
proc-macro2 = "1"
syn= "2"
