[package]
name = "rasn-compiler-tests"
workspace = ".."
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[lib]

[dependencies]
rasn-compiler-derive = { path = "../rasn-compiler-derive" }
rasn-compiler = { path = "../rasn-compiler" }
rasn = { version = "0.24.0" }

[dev-dependencies]
bitvec = { version = "1" }
bitvec-nom = { version = "0.2" }
rasn-kerberos = "0.22.0"
bytes = "1.4.0"
num-bigint = "0.4.4"
lazy_static = "1.5.0"
