[package]
name = "rasn-compiler-tests"
workspace = ".."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[lib]

[dependencies]
rasn-compiler-derive = { path = "../rasn-compiler-derive" }
rasn-compiler = { path = "../rasn-compiler" }
rasn = { version = "0.26" }

[dev-dependencies]
bitvec = { version = "1" }
bitvec-nom = { version = "0.2" }
rasn-kerberos = "0.26"
bytes = "1.10.0"
num-bigint = "0.4.6"
