[package]
name = "rasn-compiler"
workspace = ".."
description = "An ASN1 compiler producing Rust representations for the rasn framework"
keywords = ["rust", "compiler", "asn1", "ber", "der", "per", "uper", "rasn"]
categories = ["command-line-utilities", "compilers", "parser-implementations", "wasm", "encoding"]
authors = ["Kevin Westphal"]
version = "0.1.0"
edition = "2021"
readme = "../README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rasn_compiler"
path = "src/lib.rs"

[[bin]]
required-features = ["cli"]
name = "rasn_compiler_cli"
path = "src/bin.rs"

[features]
cli = ["clap","colored","walkdir"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", optional = true, features = ["derive"] }
colored = { version = "2", optional = true }
nom = "7.1.3"
walkdir = { version = "2.4", optional = true }

[dependencies.num]
version = "0.4"
default-features = false
