[package]
name = "rasn-compiler"
workspace = ".."
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
description = "An ASN.1 compiler producing bindings for the rasn framework"
keywords = ["compiler", "asn1", "ber", "der", "uper"]
categories = ["command-line-utilities", "compilers", "parser-implementations", "wasm", "encoding"]
authors = ["Kevin Westphal"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rasn_compiler"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
required-features = ["cli"]
name = "rasn_compiler_cli"
path = "src/bin.rs"

[features]
cli = ["clap", "colored", "walkdir"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", optional = true, features = ["derive"] }
colored = { version = "2", optional = true }
nom = "7.1.3"
nom_locate = "4.2.0"
proc-macro2 = "1.0"
quote = "1.0"
walkdir = { version = "2.4", optional = true }

[dependencies.num]
version = "0.4"
default-features = false

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.90"

[dev-dependencies]
internal_macros = { path = "internal-macros" }
