[package]
name = "rasn-compiler"
workspace = ".."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
description = "An ASN.1 compiler producing bindings for the rasn framework"
keywords = ["compiler", "asn1", "ber", "der", "uper"]
categories = ["command-line-utilities", "compilers", "parser-implementations", "wasm", "encoding"]
authors = ["Kevin Westphal"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rasn_compiler"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
required-features = ["cli"]
name = "rasn_compiler_cli"
path = "src/bin.rs"

[features]
cli = ["clap", "colored", "walkdir"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", optional = true, features = ["derive"] }
colored = { version = "2", optional = true }
nom = { version = "8.0", default-features = false, features = ["alloc"] }
num = { version = "0.4", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
regex = { version = "1.11.0", default-features = false }
walkdir = { version = "2.5", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.90"

[dev-dependencies]
internal_macros = { path = "internal-macros" }
